--- a/about_us.html
+++ b/about_us.html
@@ -48,7 +48,7 @@
 
                     <ul class="nav-list">
                         <i class="fa-solid fa-xmark"></i>
-                        <div class="search-bar-content search-used">
+                        <div class="search-bar-content search-used ">
                             <input type="text" name="" id="" class="search-input" placeholder="Search.." />
                             <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
                         </div>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="search-bar">
                     <i class="fa-solid fa-magnifying-glass icon-search"> </i>
-                    <div class="search-bar-content search-used">
+                    <div class="search-bar-content search-used x">
                         <input type="text" name="" id="" class="search-input" placeholder="Search.." />
                         <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
                     </div>
