--- a/contact.html
+++ b/contact.html
@@ -44,22 +44,22 @@
                 <input type="text" name="" id="" class="search-input" placeholder="Search.." />
                 <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
             </div>
-            <li class="nav-item">Home</li>
-            <li class="nav-item name">About us</li>
+            <li class="nav-item"><a href="home.html">Home</a></li>
+            <li class="nav-item name"><a href="about_us.html">About us</a></li>
             <li class="nav-item have-subnav">
-                Product
+               <a href="product.html">Product</a> 
                 <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
                 <ul class="sub-nav-product">
-                    <li class="sub-item">LOUNGE SET</li>
-                    <li class="sub-item">DINING SET</li>
-                    <li class="sub-item">CHAIRS</li>
-                    <li class="sub-item">SUNBED</li>
-                    <li class="sub-item">BISTRO SET</li>
-                    <li class="sub-item">PLANTERS</li>
+                            <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
+                            <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
+                            <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
+                            <li class="sub-item"><a href="sunbed.html">SUNBED</a></li>
+                            <li class="sub-item"><a href="bistroset.html">BISTRO SET</a></li>
+                            <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
                 </ul>
             </li>
-            <li class="nav-item">Contact</li>
-            <li class="nav-item">News</li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
+            <li class="nav-item"><a href="news.html">News</a></li>
             <li>
                 <div class="language">
                     <a href="#">
@@ -203,12 +203,12 @@
                     <div class="solid-line"></div>
                 </div>
                 <ul class="footer-list">
-                    <li class="footer-item"><a href="#">LOUNGE SET</a></li>
-                    <li class="footer-item"><a href="#">DINING SET</a></li>
-                    <li class="footer-item"><a href="#">CHAIRS</a></li>
-                    <li class="footer-item"><a href="#">SUNBED</a></li>
-                    <li class="footer-item"><a href="#">BISTRO SET</a></li>
-                    <li class="footer-item"><a href="#">PLANTERS</a></li>
+                    <li class="footer-item"><a href="loungeset.html">LOUNGE SET</a></li>
+                    <li class="footer-item"><a href="dinningset.html">DINING SET</a></li>
+                    <li class="footer-item"><a href="chairs.html">CHAIRS</a></li>
+                    <li class="footer-item"><a href="sunbed.html">SUNBED</a></li>
+                    <li class="footer-item"><a href="bistroset.html">BISTRO SET</a></li>
+                    <li class="footer-item"><a href="planters.html">PLANTERS</a></li>
                 </ul>
             </div>
             <div style="flex: 0.5" class="footer-container">
@@ -218,10 +218,10 @@
                     <div class="solid-line"></div>
                 </div>
                 <ul class="footer-list no-flex">
-                    <li class="footer-item"><a href="#">Home</a></li>
-                    <li class="footer-item"><a class="name" href="#">About us</a></li>
+                    <li class="footer-item"><a href="home.html">Home</a></li>
+                    <li class="footer-item"><a class="name" href="about_us.html">About us</a></li>
                     <li class="footer-item"><a href="./contact.html">Contact</a></li>
-                    <li class="footer-item"><a href="#">News</a></li>
+                    <li class="footer-item"><a href="news.html">News</a></li>
                 </ul>
             </div>
         </div>
