--- a/planters.html
+++ b/planters.html
@@ -46,22 +46,22 @@
                         <input type="text" name="" id="" class="search-input" placeholder="Search.." />
                         <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
                     </div>
-                    <li class="nav-item">Home</li>
-                    <li class="nav-item name">About us</li>
+                     <li class="nav-item"><a href="home.html">Home</a></li>
+                    <li class="nav-item name"><a href="about_us.html">About us</a></li>
                     <li class="nav-item have-subnav">
-                        Product
+                        <a href="product.html">Product</a>
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
                         <ul class="sub-nav-product">
-                            <li class="sub-item">LOUNGE SET</li>
-                            <li class="sub-item">DINING SET</li>
-                            <li class="sub-item">CHAIRS</li>
-                            <li class="sub-item">SUNBED</li>
-                            <li class="sub-item">BISTRO SET</li>
-                            <li class="sub-item">PLANTERS</li>
+                            <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
+                            <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
+                            <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
+                            <li class="sub-item"><a href="sunbed.html">SUNBED</a></li>
+                            <li class="sub-item"><a href="bistroset.html">BISTRO SET</a></li>
+                            <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
                         </ul>
                     </li>
-                    <li class="nav-item">Contact</li>
-                    <li class="nav-item">News</li>
+                    <li class="nav-item"><a href="contact.html>Contact</a></li>
+                    <li class="nav-item"><a href="news.html>News</a></li>
                     <li>
                         <div class="language">
                             <a href="#">
@@ -318,10 +318,10 @@
                         <div class="solid-line"></div>
                     </div>
                     <ul class="footer-list no-flex">
-                        <li class="footer-item"><a href="#">Home</a></li>
-                        <li class="footer-item"><a class="name" href="#">About us</a></li>
+                        <li class="footer-item"><a href="home.html">Home</a></li>
+                        <li class="footer-item"><a class="name" href="about_us.html">About us</a></li>
                         <li class="footer-item"><a href="./contact.html">Contact</a></li>
-                        <li class="footer-item"><a href="#">News</a></li>
+                        <li class="footer-item"><a href="news.html">News</a></li>
                     </ul>
                 </div>
             </div>
