--- a/news.html
+++ b/news.html
@@ -101,7 +101,7 @@
                 </li>
             </ul>
         </div>
-        <div style="display: flex; align-items: center;"> 
+        <div style="display: flex; align-items: center;margin-right: 24px;"> 
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass icon-search"> </i>
                 <div class="search-bar-content search-used x">
