--- a/bistroset.html
+++ b/bistroset.html
@@ -50,7 +50,7 @@
                     <li class="nav-item have-subnav">
                        <a href="product.html">Product</a> 
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul class="sub-nav-product">
+                        <ul style="z-index: 1000;" class="sub-nav-product">
                             <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
                             <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
                             <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
@@ -168,23 +168,23 @@
                 </li>
                 <li>
                     <div class="hv"></div>
-                    <a href="dinningset.html">DINING SET</a>
+                    <a href="./dinningset.html">DINING SET</a>
                 </li>
                 <li>
                     <div class="hv"></div>
-                    <a href="chairs.html">CHAIRS</a>
+                    <a href="./chairs.html">CHAIRS</a>
                 </li>
                 <li>
                     <div class="hv"></div>
-                    <a href="sunbed.html">SUNBED</a>
+                    <a href="./sunbed.html">SUNBED</a>
                 </li>
                 <li>
                     <div class="hv"></div>
-                    <a href="bistroset.html">BISTRO SET</a>
+                    <a href="./bistroset.html">BISTRO SET</a>
                 </li>
                 <li>
                     <div class="hv"></div>
-                    <a href="planters.html">PLANTERS</a>
+                    <a href="./planters.html">PLANTERS</a>
                 </li>
             </ul>
         </div>
