--- a/chairs.html
+++ b/chairs.html
@@ -50,8 +50,8 @@
                     <li class="nav-item have-subnav">
                         <a href="product.html">Product</a>
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul class="sub-nav-product">
-                                <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
+                        <ul style="z-index: 10000;" class="sub-nav-product">
+                            <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
                             <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
                             <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
                             <li class="sub-item"><a href="sunbed.html">SUNBED</a></li>
@@ -333,10 +333,10 @@
                         <div class="solid-line"></div>
                     </div>
                     <ul class="footer-list no-flex">
-                        <li class="footer-item"><a href="home.html">Home</a></li>
-                        <li class="footer-item"><a class="name" href="about_us.html">About us</a></li>
+                        <li class="footer-item"><a href="#">Home</a></li>
+                        <li class="footer-item"><a class="name" href="#">About us</a></li>
                         <li class="footer-item"><a href="./contact.html">Contact</a></li>
-                        <li class="footer-item"><a href="news.html">News</a></li>
+                        <li class="footer-item"><a href="#">News</a></li>
                     </ul>
                 </div>
             </div>
