--- a/planters.html
+++ b/planters.html
@@ -46,12 +46,12 @@
                         <input type="text" name="" id="" class="search-input" placeholder="Search.." />
                         <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
                     </div>
-                     <li class="nav-item"><a href="home.html">Home</a></li>
+                    <li class="nav-item"><a href="home.html">Home</a></li>
                     <li class="nav-item name"><a href="about_us.html">About us</a></li>
                     <li class="nav-item have-subnav">
                         <a href="product.html">Product</a>
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul class="sub-nav-product">
+                        <ul style="z-index: 10000;" class="sub-nav-product">
                             <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
                             <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
                             <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
@@ -60,8 +60,8 @@
                             <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="contact.html>Contact</a></li>
-                    <li class="nav-item"><a href="news.html>News</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="news.html">News</a></li>
                     <li>
                         <div class="language">
                             <a href="#">
