--- a/product.html
+++ b/product.html
@@ -50,7 +50,7 @@
                     <li class="nav-item have-subnav">
                         <a href="product.html">Product</a>
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul class="sub-nav-product">
+                        <ul style="z-index: 10000;" class="sub-nav-product">
                             <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
                             <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
                             <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
@@ -59,8 +59,8 @@
                             <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="contact.html>Contact</a></li>
-                    <li class="nav-item"><a href="news.html>News</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="news.html">News</a></li>
                     <li>
                         <div class="language">
                             <a href="#">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="fix-height"></div>
 
-                <a href="">High Square Planter</a>
+                <a href="HighSquarePlanter.html">High Square Planter</a>
             </div>
 
             <div class="product">
@@ -223,7 +223,7 @@
                     <i class="ic fa-solid fa-bag-shopping"> </i>
                 </div>
                 <div class="fix-height"></div>
-                <a href="">4-Pot Rectangle Poly Rattan Woven Planter</a>
+                <a href="4-Planter.html">4-Pot Rectangle Poly Rattan Woven Planter</a>
             </div>
             <div class="product">
                 <img
@@ -399,9 +399,9 @@
             </div>
         </div>
         <ul class="so">
-           <li> <a href="./product.html">1</a></li>
-           <li><a href="./product1.html">2</a></li>
-          <li> <a href="./product2.html">3</a></li>
+           <li> <a href="./product.html" target="_blank">1</a></li>
+           <li><a href="./product1.html" target="_blank">2</a></li>
+          <li> <a href="./product2.html" target="_">3</a></li>
         </ul> 
         
         <footer>
