--- a/product2.html
+++ b/product2.html
@@ -29,10 +29,20 @@ body{
 .justify-center{
     justify-content:center;
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+* {
+    font-family: Roboto, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-/* phần đầu trang
- */
- .header {
+img {
+    width: 100%;
+    height: auto;
+    max-width: 100vw; /* Đảm bảo hình ảnh không vượt quá kích thước thực của nó */
+}
+.header {
     display: flex;
     justify-content: space-around;
     padding: 15px 0;
@@ -50,11 +60,8 @@ a {
 nav {
     display: flex;
     justify-content: space-around;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-    z-index: 999;
 }
 .logo {
-    margin-left: 80px;
     width: 20vw;
 }
 nav .menu {
@@ -74,7 +81,6 @@ nav .menu .nav-list .nav-item {
 }
 nav .menu .nav-list .have-subnav {
     position: relative;
-    z-index: 10;
 }
 nav .menu .nav-list .nav-item .sub-nav-product {
     display: none;
@@ -126,6 +132,8 @@ nav .search-bar .search-bar-content {
 nav a {
     color: black;
     display: flex;
+}
+.language a {
     padding: 20px;
 }
 .name {
@@ -142,152 +150,14 @@ main {
     padding-bottom: 15px;
 }
 
-.section i{
-    margin-top: 20px;
-    margin-left: 12px;
-    font-size: 12px;
-}
-
-.icon-search{
-    cursor: pointer;
-}
-
-.section{
-    cursor: pointer;
-}
-
-.header-img{
-    height: 75vh;
-    width: 40vw;
-    position: relative;
-    left:30%;
-}
-
-.header-container{
-    margin-top: 100px;
-}
-
-.header-container > .header-content{
-    position: absolute;
-    color:#679A06;
-    top:25%;
-    left:42%;
-    justify-content: center;
-    align-items: center;
-}
-
-.header-container-2 .header-content{
-    margin-top: 32px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.show-name{
-    text-transform: uppercase;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: #fff;
-    opacity: 0;
-}
-
-.show-name,.overlay{
-    transition: all 0.3s linear;
-}
-
-.show-list{
-    margin-top: 60px;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    width: 82%;
-    height: 70%;
-    margin-left: 150px;
-    margin-right: 150px;
-}
-
-.show-img{
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
-
-.show-item{
-    overflow: hidden;
-    display: flex;
-    justify-content:stretch;
-    align-items: center;
-    border-radius: 4px;
-    border:2px solid #679A06;
-    width: 30%;
-    height: 300px;
-    position: relative;
-}
-
-.show-item:hover .overlay,
-.show-item:hover .show-name{
-    opacity: 1;
-}
-
-.show-item:hover .show-name{
-    transform: translateY(-70%) translateX(-50%);
-}
-
-.header-content > h2{
-    margin-bottom: 20px;
-}
-
-.overlay{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    opacity: 0;
-}
-
-.content-title{
-    display: flex;
-    color: #679A06;
-    justify-content: center;
-    margin-top: 80px;
-}
-
-.container-list{
-    padding-top: 80px;
-    display: flex;
-    justify-content: space-around;
-    align-items:center;
-    text-align: center;
-    flex-wrap: wrap;
-    margin-left: 150px;
-    margin-right: 150px;
-}
-
-.content-item{
-    width: 33%;
-    margin-bottom: 40px;
-}
-
-.item-img{
-    width:30%;
-    height: auto;
-    margin-bottom: 12px;
-}
-
-.large{
-    width: 35%;
-}
-
-
+/* phần cuối trang */
 
 footer {
     display: flex;
     background-color: hsla(0, 0%, 95%, 0.9);
     position: absolute;
-    bottom: -450px;
     width: 100%;
+    bottom: -830px;
 }
 .footer-container .footer-title {
     color: #679a06;
@@ -320,7 +190,7 @@ footer div ul li {
     justify-content: center;
     padding: 15px;
     position: absolute;
-    bottom: -520px;
+    bottom: -900px;
     width: 100%;
 }
 .footer-by a img {
@@ -397,19 +267,6 @@ li > .language {
 .menu ul .search-used {
     display: none;
 }
-
-.so {
-    position: absolute;
-    bottom: -100px;
-    left: 50%;
-}
-.so a{
-    border-radius: 50%;
-    border: 1px solid #679a06;
-    padding: 4px 10px;
-    
-}
-
 /* reponsive  */
 @media (max-width: 575px) {
     .menu > i {
@@ -433,18 +290,20 @@ li > .language {
     .header {
         display: none;
     }
+
     .menu > ul {
         height: 100vh;
         flex-direction: column;
         background-color: hsla(0, 0%, 97%, 0.95);
         bottom: 0;
-        box-shadow: 164px 0 10px 0 rgba(33, 18, 18, 0.5);
+
         left: 0;
         position: fixed;
         top: 0;
         transform: translateX(-500px);
-        transition: transform 0.8s;
+        transition: transform 0.5s;
         width: 260px;
+        box-shadow: 164px 0 10px 0 rgba(33, 18, 18, 0.5);
     }
     .menu ul > div {
         padding: 20px 10px;
@@ -805,12 +664,12 @@ option {
                         <input type="text" name="" id="" class="search-input" placeholder="Search.." />
                         <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
                     </div>
-                     <li class="nav-item"><a href="home.html">Home</a></li>
+                    <li class="nav-item"><a href="home.html">Home</a></li>
                     <li class="nav-item name"><a href="about_us.html">About us</a></li>
                     <li class="nav-item have-subnav">
                         <a href="product.html">Product</a>
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul class="sub-nav-product">
+                        <ul style="z-index: 10000;" class="sub-nav-product">
                             <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
                             <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
                             <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
@@ -819,8 +678,8 @@ option {
                             <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="contact.html>Contact</a></li>
-                    <li class="nav-item"><a href="news.html>News</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="news.html">News</a></li>
                     <li>
                         <div class="language">
                             <a href="#">
@@ -1022,10 +881,10 @@ option {
                         <div class="solid-line"></div>
                     </div>
                     <ul class="footer-list no-flex">
-                        <li class="footer-item"><a href="home.html">Home</a></li>
-                        <li class="footer-item"><a class="name" href="about_us.html">About us</a></li>
+                        <li class="footer-item"><a href="#">Home</a></li>
+                        <li class="footer-item"><a class="name" href="#">About us</a></li>
                         <li class="footer-item"><a href="./contact.html">Contact</a></li>
-                        <li class="footer-item"><a href="news.html">News</a></li>
+                        <li class="footer-item"><a href="#">News</a></li>
                     </ul>
                 </div>
             </div>
