--- a/sunbed.html
+++ b/sunbed.html
@@ -50,7 +50,7 @@
                     <li class="nav-item have-subnav">
                         <a href="product.html">Product</a>
                         <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul class="sub-nav-product">
+                        <ul style="z-index: 10000;" class="sub-nav-product">
                             <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
                             <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
                             <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
@@ -59,8 +59,8 @@
                             <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="contact.html>Contact</a></li>
-                    <li class="nav-item"><a href="news.html>News</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a href="news.html">News</a></li>
                     <li>
                         <div class="language">
                             <a href="#">
@@ -267,12 +267,12 @@
                         <div class="solid-line"></div>
                     </div>
                     <ul class="footer-list">
-                        <li class="footer-item"><a href="loungeset.html">LOUNGE SET</a></li>
-                        <li class="footer-item"><a href="dinningset.html">DINING SET</a></li>
-                        <li class="footer-item"><a href="chairs.html">CHAIRS</a></li>
-                        <li class="footer-item"><a href="sunbed.html">SUNBED</a></li>
-                        <li class="footer-item"><a href="bistroset.html">BISTRO SET</a></li>
-                        <li class="footer-item"><a href="planters.html">PLANTERS</a></li>
+                        <li class="footer-item"><a href="#">LOUNGE SET</a></li>
+                        <li class="footer-item"><a href="#">DINING SET</a></li>
+                        <li class="footer-item"><a href="#">CHAIRS</a></li>
+                        <li class="footer-item"><a href="#">SUNBED</a></li>
+                        <li class="footer-item"><a href="#">BISTRO SET</a></li>
+                        <li class="footer-item"><a href="#">PLANTERS</a></li>
                     </ul>
                 </div>
                 <div style="flex: 0.5" class="footer-container">
@@ -282,10 +282,10 @@
                         <div class="solid-line"></div>
                     </div>
                     <ul class="footer-list no-flex">
-                        <li class="footer-item"><a href="home.html">Home</a></li>
-                        <li class="footer-item"><a class="name" href="about_us.html">About us</a></li>
+                        <li class="footer-item"><a href="#">Home</a></li>
+                        <li class="footer-item"><a class="name" href="#">About us</a></li>
                         <li class="footer-item"><a href="./contact.html">Contact</a></li>
-                        <li class="footer-item"><a href="news.html">News</a></li>
+                        <li class="footer-item"><a href="#">News</a></li>
                     </ul>
                 </div>
             </div>
