--- a/sunbed.html
+++ b/sunbed.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Mona-Product-Sunbed</title>
         <link rel="stylesheet" href="./product.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     </head>
@@ -46,21 +46,23 @@
                         <i class="fa-solid fa-magnifying-glass icon-search-sub"></i>
                     </div>
                     <li class="nav-item"><a href="home.html">Home</a></li>
-                    <li class="nav-item name"><a href="about_us.html">About us</a></li>
-                    <li class="nav-item have-subnav">
-                        <a href="product.html">Product</a>
-                        <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
-                        <ul style="z-index: 10000;" class="sub-nav-product">
-                            <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
-                            <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
-                            <li class="sub-item"><a href="chais.html">CHAIRS</a></li>
-                            <li class="sub-item"><a href="sunbed.html">SUNBED</a></li>
-                            <li class="sub-item"><a href="bistroset.html">BISTRO SET</a></li>
-                            <li class="sub-item"><a href="planters.html"></a>PLANTERS</li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a href="news.html">News</a></li>
+                        <li class="nav-item"><a href="about_us.html">About us</a></li>
+                        <li class="nav-item have-subnav">
+                            <div style="display: flex; align-items: center">
+                                <a href="product.html">Products</a>
+                                <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
+                            </div>
+                            <ul style="z-index: 99;" class="sub-nav-product">
+                                <li class="sub-item"><a href="loungeset.html">LOUNGE SET</a></li>
+                                <li class="sub-item"><a href="dinningset.html">DINING SET</a></li>
+                                <li class="sub-item"><a href="chairs.html">CHAIRS</a></li>
+                                <li class="sub-item"><a href="sunbed.html">SUNBED</a></li>
+                                <li class="sub-item"><a href="bistroset.html">BISTRO SET</a></li>
+                                <li class="sub-item"><a href="planters.html">PLANTERS</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a href="news.html">News</a></li>
                     <li>
                         <div class="language">
                             <a href="#">
@@ -149,7 +151,7 @@
 
         <!--  -->
         <div class="hd">
-            <span><a href="">HOME  /</a><strong>SUNBED</strong> </span>
+            <span><a href="home.html">HOME  /</a><strong>SUNBED</strong> </span>
            <span><div class="slider"><i class="fa-solid fa-sliders"></i>CATEGORY </div><select name="" id="">
                 <option value="">Sort by lastest</option>
                 <option value="">Sort by popularity</option>
