--- a/about_us.html
+++ b/about_us.html
@@ -56,7 +56,7 @@
                         <li class="nav-item"><a href="about_us.html">About us</a></li>
                         <li class="nav-item have-subnav">
                             <div style="display: flex; align-items: center">
-                                <a href="#">Products</a>
+                                <a href="product.html">Products</a>
                                 <i class="fa-solid fa-chevron-down" style="color: #ccc; font-size: 12px"></i>
                             </div>
                             <ul class="sub-nav-product">
