--- a/product2.html
+++ b/product2.html
@@ -6,12 +6,26 @@
     <title>Product-Page 2 of 3- Mona bán nội thất</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <style>
+
  *{
     margin: 0;
     border: 0;
     padding:0;
     box-sizing: border-box;
 }
+.so {
+    position: absolute;
+    bottom: -420px;
+    left: 50%;
+    display: flex;
+    
+} 
+.so a{
+    border-radius: 50%;
+    border: 1px solid #679a06;
+    padding: 5px 10px;
+    margin-right: 5px
+} 
 
 body{
     scroll-behavior: smooth;
