--- a/product2.html
+++ b/product2.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <style>
 
+.so {
+    position: absolute;
+    bottom: -420px;
+    left: 50%;
+    display: flex;
+    
+} 
+.so a{
+    border-radius: 50%;
+    border: 1px solid #679a06;
+    padding: 5px 10px;
+    margin-right: 5px
+} 
  *{
     margin: 0;
     border: 0;
